--- a/notebooks/Exploration_new.ipynb
+++ b/notebooks/Exploration_new.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "b2a1cdaf-7b96-4d1c-89fe-be46b44b5b5e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Imports"
    ]
@@ -73,7 +75,9 @@
   {
    "cell_type": "markdown",
    "id": "7ad3b368-6c80-422e-a295-0ef0e20f9f1a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# 1. Opening dataset Customer data lead generator"
    ]
@@ -848,7 +852,9 @@
   {
    "cell_type": "markdown",
    "id": "0e09a02e-e7c7-4b0e-9f35-99e78c4b0096",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# 2. Baseline model : Modelling with labeled data only"
    ]
@@ -1018,9 +1024,7 @@
   {
    "cell_type": "markdown",
    "id": "8126302e-18a6-41e6-af2e-0b8e037ff8e1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2.2. Cross-validation on X_train_cv dataset - a validation dataset is kept for final evaluation"
    ]
@@ -1925,9 +1929,7 @@
   {
    "cell_type": "markdown",
    "id": "63d7ff1c-5a5c-40da-857c-4872818cdab1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2.3 Optimal binning insights"
    ]
@@ -2554,9 +2556,7 @@
   {
    "cell_type": "markdown",
    "id": "d98d2c68-358c-4ec0-9b3a-2abda7ef39bd",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 2.3.1 Optimal binning Scorecard"
    ]
@@ -2820,9 +2820,7 @@
   {
    "cell_type": "markdown",
    "id": "79c0d995-5674-48de-88e5-62cc1f0e3fff",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Univariate plots from Optimal Binning scorecard to see the relationship between target and the bins created"
    ]
@@ -2907,7 +2905,7 @@
    "metadata": {},
    "source": [
     "#### Conclusion:\n",
-    "We notice that Optimal binning identified some interesting pockets of population which more or less prone to purchase the final products in the following variables:\n",
+    "We notice that Optimal binning identified some interesting pockets of population which are more or less prone to purchase the final products in the following variables:\n",
     "* q_2017 Personal Care: Per Capita_dependence_plot\n",
     "* q_2017 Pop 15+-Edu: University, Fachhochschule_dependence_plot\n",
     "* q_2017 Purchasing Power: Per Capita_dependence_plot (clear anti-linear relationship)\n",
@@ -2921,7 +2919,9 @@
   {
    "cell_type": "markdown",
    "id": "892c8ee5-f3a0-43e5-99f4-9d8faad8ecdb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 2.4. Shapley values and Feature importance analysis"
    ]
@@ -4104,11 +4104,9 @@
   {
    "cell_type": "markdown",
    "id": "d4e9383e-102f-4de7-98ea-2f18c9773fb1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# 3. Reweighting dataset based on unlabeled data distribution "
+    "# 3. Transfer learning: Reweighting dataset based on unlabeled data distribution "
    ]
   },
   {
@@ -4117,7 +4115,7 @@
    "metadata": {},
    "source": [
     "In this section we want to leverage the unlabeled data we have access to, i.e. `df1[lambda x: x[\"b_in_kontakt_gewesen\"]==0]`. \n",
-    "This data is rich in number of observation and as such is more accurate in terms of variables distributions. Hence, our labeled data `df1[lambda x: x[\"b_in_kontakt_gewesen\"]==0]` could lead to better model, if it followed the same distributions.\n",
+    "This data is rich in number of observations and as such is more accurate in terms of variables distributions. Hence, our labeled data `df1[lambda x: x[\"b_in_kontakt_gewesen\"]==0]` could lead to better model, if it followed the same distributions.\n",
     "\n",
     "There is a library called Cinnamon (https://github.com/zelros/cinnamon) which allows us to apply the so-called Inverse Propensity Weighting method (IPW). In other words, we compute a weighting vector  which allows distribution A to match distribution B, where \n",
     "* `A = df1[lambda x: x[\"b_in_kontakt_gewesen\"]==0]`\n",
@@ -7139,7 +7137,7 @@
    "id": "981040bf-2613-41f1-8368-26762ea24a4b",
    "metadata": {},
    "source": [
-    "## 3.4. Correction on validation dataset and train dataset (in order to retrain the model)\n",
+    "## 3.4. Correction on train dataset (in order to retrain the model)\n",
     "We apply the same adversarial strategy on training data."
    ]
   },
